--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        function loadContentTable() {
+
+            // Sets content table content as array
+            var links = [
+                {
+                    label: "W01",
+                    url: "W01/Local Storage/index.html"
+                }
+            ];
+
+            var ol = document.getElementById('content-table');
+
+            links.map(item => {    
+                var li = document.createElement('li');
+                var a = createLink(item.label, item.url);
+                entry.appendChild(a);
+                list.appendChild(entry);
+            })
+        
+        }
+
+        function createLink(title, link) {
+            // Creates link
+            var a = document.createElement('a');
+            var linkText = document.createTextNode(title);
+            a.appendChild(linkText);
+            a.title = title;
+            a.href = link;
+            document.body.appendChild(a);
+        }
+    </script>
 </head>
-<body>
+<body onload="loadContentTable()">
     <h1>WDD 330 Web Development - Fall 22</h1>
+    <ol id="content-table"></ol>
 </body>
 </html>
