Added filter options

--- a/W06/index.html
+++ b/W06/index.html
@@ -11,6 +11,11 @@
 <body>
     <div class="container todoApp">
         <h1>Todo List</h1>
+        <div>
+            <button id="all-btn">All</button>
+            <button id="complete-btn">Complete</button>
+            <button id="incomplete-btn">Incomplete</button>
+        </div>
         <div class="section">
             <form class="Form">
                 <input type="text" id="todo-input" placeholder="Add todo..."/>
