--- a/W06/index.html
+++ b/W06/index.html
@@ -11,15 +11,17 @@
 <body>
     <div class="container todoApp">
         <h1>Todo List</h1>
-        <div>
+        <h3>Filter Todos</h3>
+        <div class="filter-btns">
             <button id="all-btn">All</button>
             <button id="complete-btn">Complete</button>
             <button id="incomplete-btn">Incomplete</button>
         </div>
+        <h3>Todos</h3>
         <div class="section">
-            <form class="Form">
+            <form class="form">
                 <input type="text" id="todo-input" placeholder="Add todo..."/>
-                <button id="add-btn">add</button>
+                <button id="add-btn">Add Todo</button>
             </form>
         </div>
         <div class="section">
