--- a/W07/hikes5/hiking-complete.html
+++ b/W07/hikes5/hiking-complete.html
@@ -56,6 +56,20 @@
       .light h3 {
         margin-bottom: -0.5em;
       }
+
+      #comment-container {
+        display: flex;
+        flex-direction: column;
+        row-gap: 15px;
+        border: 1px solid red;
+
+      }
+
+      #comment-container #title {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
     </style>
   </head>
 
