--- a/W08/index.html
+++ b/W08/index.html
@@ -70,7 +70,7 @@
             content: '';
             width: 90px;
             height: 92px;
-            background-image: url(../images/bike_sprite.png);
+            background-image: url(../assets/images/bike_sprite.png);
             display: block;
             margin: auto;
             animation:
