--- a/W08/index.html
+++ b/W08/index.html
@@ -6,7 +6,6 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script></script>
     <style>
         h1 {
             -webkit-transform: translate(45px,-45px); /* iOS8, Android ↵4.4.3, BB10 */
@@ -81,9 +80,13 @@
         h2:hover:after {
             animation-play-state: running;
         }
+
+        .myCanvas {
+            border: dotted 2px black;
+        }
     </style>
 </head>
-<body>
+<hr>
 <h1>Hello World</h1>
 <br>
 <div class="ad-ad2">
@@ -91,5 +94,38 @@
 </div>
 <br>
 <h2></h2>
+<br>
+<h1>Canvas</h1>
+<canvas id="myCanvas" class="myCanvas">
+    Sorry! Your browser doesn’t support Canvas.
+</canvas>
+
+<h1>Drawing</h1>
+
+<h1>Demo 6: Drawing an image to the canvas</h1>
+<canvas width="200" height="200" id="demo6" class="myCanvas">
+    Sorry! Your browser doesn't support Canvas.
+</canvas>
+
+<img src="../assets/images/bike_sprite.png" id="myImageElem">
+
+
 </body>
+<script>
+    var canvas = document.getElementById("myCanvas");
+    var context = canvas.getContext("2d");
+    context.strokeStyle = "red";
+    context.fillStyle = "rgba(0, 0, 255, 0.5)";
+    context.fillRect(10, 10, 100, 100);
+    context.strokeRect(10, 10, 100, 100);
+
+    window.addEventListener("load", drawImageToCanvas, false);
+
+    function drawImageToCanvas() {
+        var canvas = document.getElementById("demo6");
+        var context = canvas.getContext("2d");
+        var image = document.getElementById("myImageElem");
+        context.drawImage(image, 0, 0);
+    }
+</script>
 </html>
