--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./main.js"></script>
+    <style>
+        ol {
+            background: #40798C;
+            padding: 20px;
+        }
+
+        ol li {
+            background: #70A9A1;
+            color: #40798C;
+            padding: 5px;
+            margin-left: 35px;
+            font-size:  2em;
+        }
+
+
+    </style>
 </head>
 <body onload="loadContentTable()">
     <h1>WDD 330 Web Development - Fall 22</h1>
+    <h3>Alexander Escamilla's portfolio</h3>
     <hr>
     <ol id="content-table"></ol>
 </body>
